--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -46,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "tailwindcss": "^3.4.3"
   }
 }
